# open-science-mentions

./: .gitignore  README.md  artifact.md  cur_dvb.Rda  database.py  journals_ed.csv  journals_psych.csv  journals_sped.csv  notes.md  parse.py  processedFrontiersData.Rda  pyproject.toml  ruff.toml  test.py
configs/: db_config.json  grobid_config.json
experiment/: de_journals.csv  ed.R  mdpi_git_links.csv  mkSources.R  new.R  pedocs.R  plot.R  rtest.R  test.ipynb  test.py  test_set_ground_truth.csv
experiment/fetch_data/: education_journals.csv  education_journals_count.csv  mkSources.R  pedocs-auswahl_1.csv  pedocs-auswahl_2.csv  pedocs.R
experiment/paper1/: analysis.R  fe_stats.Rda  pedocs_auswahl.csv
experiment/paper1/results/: deutsche_schule_links_clean.csv  ds_download_statistics.csv  ethe_links_clean.csv  fe_links_clean.csv  mdpi_download_statistics.csv  mdpi_links_clean.csv  ze_download_statistics.csv  zeitschrift_fuer_erziehungswissenschaften_links_clean.csv  (+2 more)
experiment/test/: test_set.csv  test_set_adj.csv  test_set_ground_truth.csv
paper/: .gitignore  own_references.bib  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  references.bib
scripts/: csv2latex.py  datastet.sh  parse.R  run_grobid.sh  test.sh  test_download.py  todo.sh
src/: database.py  fetch.py  matching.py  parse.py  pipeline.py  processing.py  queries.py  sbtest.py  sel_download_dir.txt  test.py  test_dl.py  test_sel.py  vpn.py
src/process/: analysis.py  download.py  grobid.py  llm.py  main.py  xmlhandler.py
test_data/: snapshot.json  test
